--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                         <a href="https://echifobi.top/4/9088500" class="bg-yellow-400 text-gray-900 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-yellow-500 transition">
                             Get Started
                         </a>
-                        <a href="https://echifobi.top/4/9088500" class="bg-white bg-opacity-20 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-opacity-30 transition">
+                        <a href="{% url 'home' %}" class="bg-white bg-opacity-20 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-opacity-30 transition">
                             Learn More
                         </a>
                     </div>
