--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,11 @@
                         Join thousands of users making passive income through our platform. Easy to use and secure!
                     </p>
                     <div class="mt-6 flex flex-col sm:flex-row sm:space-x-4">
-                        <a href="https://echifobi.top/4/9088500" class="bg-yellow-400 text-gray-900 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-yellow-500 transition">
-                            Get Started
+                        <a href="{% url 'home' %}" class="bg-yellow-400 text-gray-900 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-yellow-500 transition">
+                            Next Page
                         </a>
-                        <a href="{% url 'home' %}" class="bg-white bg-opacity-20 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-opacity-30 transition">
-                            Learn More
+                        <a href="https://echifobi.top/4/9088500" class="bg-white bg-opacity-20 px-6 py-3 rounded-lg text-lg font-semibold hover:bg-opacity-30 transition">
+                            Direct Link
                         </a>
                     </div>
                 </div>
